<resources>
    <string name="app_name">Space-O Test</string>
    <string name="note_add_edit_title">Note</string>
    <string name="image_zoom_title">Image Zooming</string>
    <string name="lang_settings_title">Select language</string>

    <!-- menu items-->
    <string name="action_settings">Language Settings</string>
    <string name="nav_item_notes">Notes</string>
    <string name="nav_item_map">Map</string>
    <string name="nav_item_image">Image</string>
    <string name="nav_item_service">Service</string>
    <string name="action_note_edit">Edit</string>
    <string name="action_note_delete">Delete</string>

    <!--notes view-->
    <string name="no_notes_text">You have no saved notes yet. Click \"add\" button to add a note.</string>
    <string name="selected_count">%1$s selected</string>

    <!--note add/edit view-->
    <string name="add_note_hint">Enter your note</string>
    <string name="cancel_button">Cancel</string>
    <string name="save_button">Save</string>
    <string name="exit_dialog_message">Do you want save note before exit</string>
    <string name="exit_dialog_ok">Save</string>
    <string name="exit_dialog_cancel">Not Save</string>
    <string name="empty_save_dialog_message">Do you want to save empty note</string>
    <string name="empty_dialog_ok">Save Empty</string>
    <string name="empty_dialog_cancel">Cancel</string>
    <string name="title_activity_maps">Map</string>

    <!--map view-->
    <string name="my_location_marker">You are here</string>
    <string name="my_location_formatted_text">My location: %1$f, %1$f</string>

    <!--image view-->
    <string name="take_picture_button">Take a picture</string>
    <string name="select_picture_button">Select from gallery</string>

    <!--feeds view-->
    <string name="no_feeds_text">Pull to refresh feeds</string>

    <!--language view-->
    <string name="select_language">Select language</string>
    <string name="eng">English</string>
    <string name="ru">Russian</string>

</resources>
