<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".view.activity.LanguageSettingsActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/select_language"
        android:layout_margin="20dp"
        android:textSize="18sp"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/englishButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eng"
            android:layout_margin="10dp"/>
        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/russianButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ru"
            android:layout_margin="10dp"/>
    </RadioGroup>

</LinearLayout>
