<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".view.activity.NoteAddEditActivity"
    tools:showIn="@layout/activity_note_add_edit">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/noteNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxHeight="400dp"
                android:layout_margin="10dp"
                android:paddingTop="20dp"
                android:hint="@string/add_note_hint"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentBottom="true">
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/cancelButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:layout_margin="5dp"
                    android:text="@string/cancel_button"
                    android:textColor="@android:color/white"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:theme="@style/ButtonsOverlay"/>
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/saveButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:layout_margin="5dp"
                    android:text="@string/save_button"
                    android:textColor="@android:color/white"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:theme="@style/ButtonsOverlay"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</FrameLayout>
